k8s/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    env: devops
